Fix bug with jumpy map

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -494,7 +494,6 @@ input[type="file"]::file-selector-button {
   position: fixed;
   top: 24vh;
   z-index: 3;
-  width: 33.5vw;
 }
 
 #footer-events {
